# airbot-play-rust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  out.txt
.cargo/: config.toml
.github/workflows/: build.yml
assets/urdf/: play.urdf  play_e2.urdf  play_g2.urdf
design/: crate-components.md  user-story.md
ffi/: CMakeLists.txt  pinocchio_shim.cpp  pinocchio_shim.hpp
ffi/cmake/: Findurdfdom.cmake  Findurdfdom_headers.cmake
patches/: pinocchio-static-build.patch
root/DEBIAN/: postinst  postrm
root/lib/systemd/system/: slcan@.service
root/lib/udev/rules.d/: 90-usb-can.rules  90-usb-slcan.rules
scripts/: airbot_play_eef_linear_move_test.py  airbot_play_eef_ws_keyboard.py  airbot_play_iceoryx2_keyboard.py  airbot_play_joint_tracking_test.py  airbot_play_keyboard.py  airbot_play_test_common.py  airbot_play_ws_keyboard.py  install-system-setup.sh
src/: client.rs  lib.rs  request_service.rs  types.rs  warning_bus.rs  warnings.rs
src/arm/: command_slot.rs  mod.rs  play.rs
src/can/: mod.rs  realtime.rs  router.rs  socketcan_io.rs  worker.rs
src/diag/: decode.rs  format.rs  input.rs  mod.rs
src/eef/: client.rs  e2.rs  g2.rs  mod.rs  runtime.rs
src/model/: backend.rs  mod.rs  pinocchio.rs  pinocchio_ffi.rs  play_analytical.rs  registry.rs  urdf.rs
src/motor/: mod.rs
src/probe/: discover.rs
src/protocol/: mod.rs
src/protocol/board/: gpio.rs  mod.rs  play_base.rs  play_end.rs
src/protocol/motor/: dm.rs  mod.rs  od.rs
src/session/: mod.rs
src/transport/: eef_websocket.rs  iceoryx2.rs  mod.rs  websocket.rs
tests/: diag.rs  model.rs  protocol.rs
