[package]
name = "airbot_play_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["iceoryx2-transport"]
iceoryx2-transport = ["dep:async-trait", "dep:iceoryx2"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
clap = { version = "4.6.0", features = ["derive"] }
cxx = "1.0.187"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
iceoryx2 = { path = "third_party/iceoryx2/iceoryx2", optional = true }
libc = "0.2.184"
nalgebra = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketcan = "3.5.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.187"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "airbot-can-diag"
path = "bin/airbot-can-diag.rs"

[[bin]]
name = "airbot-play-probe"
path = "bin/airbot-play-probe.rs"

[[bin]]
name = "airbot-play-ws"
path = "bin/airbot-play-ws.rs"

[[bin]]
name = "airbot-play-iceoryx2"
path = "bin/airbot-play-iceoryx2.rs"
required-features = ["iceoryx2-transport"]
