[package]
name = "airbot_play_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "AIRBOT Play Rust driver and CLI tooling"
readme = "README.md"

[features]
default = ["iceoryx2-transport"]
iceoryx2-transport = ["dep:async-trait", "dep:iceoryx2"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
clap = { version = "4.6.0", features = ["derive"] }
cxx = "1.0.187"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
iceoryx2 = { path = "third_party/iceoryx2/iceoryx2", optional = true }
libc = "0.2.184"
nalgebra = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketcan = "3.5.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.187"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "airbot-can-diag"
path = "bin/airbot-can-diag.rs"

[[bin]]
name = "airbot-play-probe"
path = "bin/airbot-play-probe.rs"

[[bin]]
name = "airbot-play-ws"
path = "bin/airbot-play-ws.rs"

[[bin]]
name = "airbot-play-e2-ws"
path = "bin/airbot-play-e2-ws.rs"

[[bin]]
name = "airbot-play-g2-ws"
path = "bin/airbot-play-g2-ws.rs"

[[bin]]
name = "airbot-play-iceoryx2"
path = "bin/airbot-play-iceoryx2.rs"
required-features = ["iceoryx2-transport"]

[package.metadata.deb]
name = "airbot-play-rust"
maintainer = "DISCOVER Robotics Limited <george@discover-robotics.com>"
copyright = "2026, DISCOVER Robotics Limited"
depends = "$auto, can-utils, iproute2, kmod, udev, usbutils"
extended-description-file = "README.md"
maintainer-scripts = "root/DEBIAN"
section = "utils"
priority = "optional"
assets = [
    ["target/release/airbot-can-diag", "usr/bin/", "755"],
    ["target/release/airbot-play-probe", "usr/bin/", "755"],
    ["target/release/airbot-play-ws", "usr/bin/", "755"],
    ["target/release/airbot-play-e2-ws", "usr/bin/", "755"],
    ["target/release/airbot-play-g2-ws", "usr/bin/", "755"],
    ["target/release/airbot-play-iceoryx2", "usr/bin/", "755"],
    ["root/bin/bind_airbot_device", "usr/bin/", "755"],
    ["root/bin/can_add.sh", "usr/bin/", "755"],
    ["root/bin/slcan_add.sh", "usr/bin/", "755"],
    ["root/lib/udev/rules.d/90-usb-can.rules", "lib/udev/rules.d/90-usb-can.rules", "644"],
    ["root/lib/udev/rules.d/90-usb-slcan.rules", "lib/udev/rules.d/90-usb-slcan.rules", "644"],
    ["root/lib/systemd/system/slcan@.service", "lib/systemd/system/slcan@.service", "644"],
    ["README.md", "usr/share/doc/airbot-play-rust/README.md", "644"],
]
