cmake_minimum_required(VERSION 3.22)

project(airbot_pinocchio_native LANGUAGES CXX)

if(NOT DEFINED PINOCCHIO_SOURCE_DIR)
  message(FATAL_ERROR "PINOCCHIO_SOURCE_DIR must point at third_party/pinocchio")
endif()

if(NOT DEFINED PINOCCHIO_DEP_PREFIX)
  message(FATAL_ERROR "PINOCCHIO_DEP_PREFIX must point at the dependency prefix")
endif()

list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
set(CMAKE_PREFIX_PATH "${PINOCCHIO_DEP_PREFIX};${CMAKE_PREFIX_PATH}")
set(CMAKE_BUILD_RPATH "${PINOCCHIO_DEP_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH "\$ORIGIN;${PINOCCHIO_DEP_PREFIX}/lib")

set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(BUILD_BENCHMARK OFF CACHE BOOL "" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_UTILS OFF CACHE BOOL "" FORCE)
set(BUILD_PYTHON_INTERFACE OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_LIBPYTHON OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_SDF_SUPPORT OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_COLLISION_SUPPORT OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_AUTODIFF_SUPPORT OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_CODEGEN_SUPPORT OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_OPENMP_SUPPORT OFF CACHE BOOL "" FORCE)
set(BUILD_WITH_EXTRA_SUPPORT OFF CACHE BOOL "" FORCE)
set(INSTALL_DOCUMENTATION OFF CACHE BOOL "" FORCE)
set(ENABLE_TEMPLATE_INSTANTIATION ON CACHE BOOL "" FORCE)

set(PINOCCHIO_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/pinocchio-build")
add_subdirectory("${PINOCCHIO_SOURCE_DIR}" "${PINOCCHIO_BINARY_DIR}")

set(_airbot_runtime_rpath "\$ORIGIN;${PINOCCHIO_DEP_PREFIX}/lib")
foreach(_target pinocchio_default pinocchio_parsers)
  if(TARGET ${_target})
    set_target_properties(
      ${_target}
      PROPERTIES BUILD_RPATH "${PINOCCHIO_DEP_PREFIX}/lib"
                 INSTALL_RPATH "${_airbot_runtime_rpath}")
  endif()
endforeach()
